Implement Manager functionality. Restrict accesses.

--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,7 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+./CinemaApp.Web/appsettings.json
+/CinemaApp.Web/appsettings.Development.json
+/CinemaApp.Web/appsettings.json
