--- a/CinemaApp.WebApi/appsettings.Development.json
+++ b/CinemaApp.WebApi/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "SQLServer": "Server=DESKTOP-H3STVF4\\SQLEXPRESS;Database=CinemaApp2024;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Client Origins": {
+    "CinemaWebApp": "https://localhost:7015"
   }
 }
