--- a/CinemaApp.Web.Infrastructure/CinemaApp.Web.Infrastructure.csproj
+++ b/CinemaApp.Web.Infrastructure/CinemaApp.Web.Infrastructure.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CinemaApp.Common\CinemaApp.Common.csproj" />
     <ProjectReference Include="..\CinemaApp.Data\CinemaApp.Data.csproj" />
   </ItemGroup>
 
