Implement User Management functionality for Admin users.

--- a/CinemaApp.Web/CinemaApp.Web.csproj
+++ b/CinemaApp.Web/CinemaApp.Web.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\CinemaApp.Web.Infrastructure\CinemaApp.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\CinemaApp.Web.ViewModels\CinemaApp.Web.ViewModels.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Views\Shared\" />
+  </ItemGroup>
 </Project>
